<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WebCom</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="adresseEmail">Adresse e-mail</string>

    <string-array name="ListePrincipale">
        <item>Accueil</item>
        <item>Mon compte</item>
    </string-array>

    <string name="enregistrer">Enregistrer</string>
    <string name="password">Mot de passe</string>
    <string name="adresse">Adresse</string>
    <string name="telephone">Télephone</string>
    <string name="hello_world">WebCom</string>
    <string name="menu_settings">Settings</string>
    <string name="seePassword">Afficher le mot de passe</string>
    <string name="forgotPassword">Vous avez oublié votre mot de passe?</string>
    <string name="connexion">Connexion (serveur sécurisé)</string>
    <string name="createCompte">Créer compte</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_menu_fragment">MenuFragment</string>
    <string name="MenuAccueil">Accueil</string>
    <string name="MenuCompte">Mon compte</string>
    <string name="MenuPanier">Mon panier</string>

</resources>