<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewAjoutUser"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayoutAjoutUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextNomUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nom" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextPrenomUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom" />

        <EditText
            android:id="@+id/editTextMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/adresseEmail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextAdresseUSer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/adresse"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/editTextTelUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telephone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editTextPasswordUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonEnregistrerUser"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:text="@string/enregistrer" />

    </LinearLayout>

</ScrollView>