<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewConnexion"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayoutConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:hint="@string/adresseEmail"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkBoxSeePassWord"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/seePassword" />

        <Button
            android:id="@+id/buttonConnexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connexion" />

        <TextView
            android:id="@+id/textViewLienForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPassword" />

        <Button
            android:id="@+id/buttonCreateCompte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createCompte" />

    </LinearLayout>

</ScrollView>