<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayoutPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".AccueilActivity" >

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
=======
=======
>>>>>>> origin/Francois
=======
>>>>>>> origin/Francois
=======
>>>>>>> origin/Francois
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:text="@string/enregistrer" />

<<<<<<< HEAD
<<<<<<< HEAD
>>>>>>> origin/Francois
=======
>>>>>>> origin/Francois
=======
>>>>>>> origin/Francois
=======
            android:text="@string/createCompte" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connexion" />

>>>>>>> origin/Francois
    </LinearLayout>

</ScrollView>